--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head> 
-    <title>Your Name Here</title> 
+    <title>Dalton Grimes</title> 
     <link rel="stylesheet" href="style.css">
     <title>Test</title>
   </head>
